# explore-keycloak

./: .gitignore  00_keycloak_generate_magic_link.ipynb  00_keycloak_oidc_experiments.ipynb  Dockerfile  README.md  README_START_HERE.html  README_START_HERE.md  _quarto.yml  docker-compose.yml  index.html  index.ipynb  keycloak_generate_magic_link.html  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
_docs/: README_START_HERE.html  core.html  index.html  search.json  sitemap.xml
explore_keycloak/: _modidx.py
